--- a/enarx-keep-sev-shim/.cargo/config
+++ b/enarx-keep-sev-shim/.cargo/config
@@ -3,7 +3,4 @@
 
 [build]
 target = "x86_64-unknown-linux-musl"
-rustflags = [
-    "-C", "relocation-model=pic",
-    "-C", "linker=../cc",
-]
+rustflags = [ "-C", "linker=../cc" ]
