--- a/enarx-keep-sev-shim/.cargo/config
+++ b/enarx-keep-sev-shim/.cargo/config
@@ -1,6 +1,8 @@
 [build]
-target = "x86_64-unknown-linux-musl"
+target = "x86_64-unknown-enarx-musl.json"
 rustflags = [
     "-C", "relocation-model=pic",
-    "-C", "linker=../cc",
 ]
+
+[unstable]
+build-std = [ "core" ]
