--- a/enarx-keep-sev-shim/Cargo.toml
+++ b/enarx-keep-sev-shim/Cargo.toml
@@ -10,7 +10,7 @@ bounds = { path = "../bounds" }
 units = { path = "../units" }
 memory = { path = "../memory" }
 sallyport = { path = "../sallyport" }
-libc = { version = "0.2.69", features = [] }
+libc = { version = "*", default-features = false }
 x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
 spinning = { version = "0.0", default-features = false}
 lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
