Add wasmldr to github workflows
* Enable `--feature=wasmldr` when running the main test action
* Add `wasmldr` to the list of internal crates to test

Signed-off-by: Will Woods <will@profian.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: ${{ matrix.profile.flag }} --no-default-features --features=backend-${{ matrix.backend.name }}
+          args: ${{ matrix.profile.flag }} --no-default-features --features=backend-${{ matrix.backend.name }} --features=wasmldr
     strategy:
       fail-fast: false
       matrix:
@@ -50,6 +50,7 @@ jobs:
         crate:
           - shim-sgx
           - shim-sev
+          - wasmldr
         profile:
           - name: debug
           - name: release
