feat(shim-kvm): remove .cargo/config
With `soft-float` and without `sse`, the `aes-gcm` crate needs
the `force-soft` feature.

Co-authored-by: bstrie <865233+bstrie@users.noreply.github.com>

Signed-off-by: Harald Hoyer <harald@profian.com>

--- a/internal/shim-kvm/Cargo.toml
+++ b/internal/shim-kvm/Cargo.toml
@@ -32,7 +32,7 @@ linked_list_allocator = { version = "0.9.1", default-features = false }
 bit_field = "0.10"
 bitflags = "1.3"
 lock_api = "0.4"
-aes-gcm = { version = "0.9", features = ["aes"], default-features = false  }
+aes-gcm = { version = "0.9", features = ["aes", "force-soft" ], default-features = false  }
 const-default = { version = "1.0", features = [ "derive" ] }
 
 [dev-dependencies]
