chore(release): bump version to 0.5.0-pre
Signed-off-by: Paul Pietkiewicz <paul@profian.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "enarx"
-version = "0.4.0"
+version = "0.5.0-pre"
 edition = "2021"
 description = "Tools for deploying WebAssembly into Enarx Keeps"
 authors = ["The Enarx Project Developers"]
@@ -40,7 +40,7 @@ serde_json = { version = "1.0.79", features = ["std"], default-features = false 
 
 # optional dependencies
 const-default = { version = "1.0", optional = true, features = ["derive"], default-features = false }
-enarx-exec-wasmtime = { version = "0.4.0", path = "crates/exec-wasmtime", optional = true, default-features = false }
+enarx-exec-wasmtime = { version = "0.5.0-pre", path = "crates/exec-wasmtime", optional = true, default-features = false }
 gdbstub = { version = "0.5.0", optional = true, features = ["std"], default-features = false }
 goblin = { version = "0.5", optional = true, features = ["elf64", "elf32", "std", "endian_fd"], default-features = false }
 iocuddle = { version = "0.1.1", optional = true, default-features = false }
@@ -52,7 +52,7 @@ nbytes = { version = "0.1", optional = true, default-features = false }
 primordial = { version = "0.5", optional = true, features = ["alloc"], default-features = false }
 protobuf = { version = "2.22", optional = true, default-features = false }
 rand = { version = "0.8", optional = true, features = ["std", "std_rng"], default-features = false }
-sallyport = { version = "0.4.0", optional = true, path = "crates/sallyport", default-features = false }
+sallyport = { version = "0.5.0-pre", optional = true, path = "crates/sallyport", default-features = false }
 semver = { version = "1.0", optional = true, default-features = false }
 sgx = { version = "0.5.0", optional = true, features = ["rcrypto"], default-features = false }
 static_assertions = { version = "1.1.0", optional = true, default-features = false }
@@ -63,9 +63,9 @@ x86_64 = { version = "0.14.9", optional = true, default-features = false }
 # binary dependencies
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
 # FIXME: The enarx-exec-wasmtime-bin crate should be merged with enarx-exec-wasmtime again, see https://github.com/enarx/enarx/issues/1798
-enarx-exec-wasmtime-bin = { version = "0.4.0", path = "crates/exec-wasmtime-bin", artifact = "bin", target = "x86_64-unknown-linux-musl", default-features = false }
-enarx-shim-kvm = { version = "0.4.0", path = "crates/shim-kvm", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
-enarx-shim-sgx = { version = "0.4.0", path = "crates/shim-sgx", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
+enarx-exec-wasmtime-bin = { version = "0.5.0-pre", path = "crates/exec-wasmtime-bin", artifact = "bin", target = "x86_64-unknown-linux-musl", default-features = false }
+enarx-shim-kvm = { version = "0.5.0-pre", path = "crates/shim-kvm", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
+enarx-shim-sgx = { version = "0.5.0-pre", path = "crates/shim-sgx", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
 
 [build-dependencies]
 protobuf-codegen-pure = { version = "2.27", default-features = false }
