--- a/crates/exec-wasmtime-bin/Cargo.toml
+++ b/crates/exec-wasmtime-bin/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "enarx-exec-wasmtime-bin"
-version = "0.4.0"
+version = "0.5.0-pre"
 edition = "2021"
 description = "Enarx WebAssembly Loader"
 authors = ["The Enarx Project Developers"]
@@ -12,7 +12,7 @@ license = "Apache-2.0"
 [dependencies]
 anyhow = { version = "1.0", default-features = false }
 clap = { version = "3.1.10", features = ["derive", "std"], default-features = false }
-enarx-exec-wasmtime = { version = "0.4.0", path = "../exec-wasmtime", default-features = false }
+enarx-exec-wasmtime = { version = "0.5.0-pre", path = "../exec-wasmtime", default-features = false }
 env_logger = { version = "0.9", default-features = false }
 libc = { version = "0.2.124", default-features = false }
 
