--- a/crates/exec-wasmtime/Cargo.toml
+++ b/crates/exec-wasmtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "enarx-exec-wasmtime"
-version = "0.4.0"
+version = "0.5.0-pre"
 edition = "2021"
 description = "Enarx WebAssembly Loader"
 authors = ["The Enarx Project Developers"]
