--- a/crates/sallyport/Cargo.toml
+++ b/crates/sallyport/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sallyport"
-version = "0.4.0"
+version = "0.5.0-pre"
 edition = "2021"
 description = "API for the Enarx hypervisor-microkernel boundary"
 authors = ["The Enarx Project Developers"]
