--- a/crates/shim-sgx/Cargo.toml
+++ b/crates/shim-sgx/Cargo.toml
@@ -20,7 +20,7 @@ mmledger = { version = "0.3", default-features = false }
 noted = { version = "1.0.0", default-features = false }
 primordial = { version = "0.5.0", features = ["const-default"], default-features = false }
 rcrt1 = { version = "1.0.0", default-features = false }
-sallyport = { version = "0.5.0-pre", path = "../sallyport", default-features = false }
+sallyport = { version = "0.5.0-pre", registry = "mock", path = "../sallyport", default-features = false }
 sgx = { version = "0.5.0", default-features = false }
 spinning = { version = "0.1", default-features = false }
 x86_64 = { version = "0.14.9", default-features = false }
