--- a/.cargo/config
+++ b/.cargo/config
@@ -1,13 +1,27 @@
 [target.wasm32-wasi]
 runner = "helper/test-enarx-wasm.sh"
 
+[target.x86_64-unknown-musl]
+rustflags = [
+    "-Z", "cf-protection=full",
+]
+
+[target.x86_64-unknown-gnu]
+rustflags = [
+    "-Z", "cf-protection=full",
+]
+
 [target.x86_64-unknown-none]
 rustflags = [
     "-C", "linker=gcc",
+    "-Z", "cf-protection=full",
 ]
 
 [target.x86_64-pc-windows-msvc]
-rustflags = ["-C", "target-feature=+crt-static"]
+rustflags = [
+    "-C", "target-feature=+crt-static",
+    "-Z", "cf-protection=full",
+]
 
 [unstable]
 bindeps = true
