feat: add `enarx sign` and `--signatures` option
To run signed keeps a signature file has to be created first:

```console
$ openssl genrsa -3 -out sgx.key 3072
$ openssl genpkey -outform PEM -out sev-id.key -algorithm EC -pkeyopt ec_paramgen_curve:P-384 -pkeyopt ec_param_enc:named_curve
$ openssl genpkey -outform PEM -out sev-author.key -algorithm EC -pkeyopt ec_paramgen_curve:P-384 -pkeyopt ec_param_enc:named_curve
```

```console
$ enarx sign --sgx-key sgx.key --sev-key sev-id.key --sev-author-key sev-author.key  > sig.json
```

Then to run a workload the `--signatures` option has to be used:
```console
$ enarx run --signatures sig.json hello_wasi_snapshot1.wasm
```

Signed-off-by: Harald Hoyer <harald@profian.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ log = { version = "0.4", default-features = false }
 oauth2 = { version = "4.2.2", default-features = false, features = ["ureq"] }
 once_cell = { version = "1.11.0", features = ["std"], default-features = false }
 openidconnect = { version = "2.3.2", features = ["ureq"], default-features = false }
+ring = { version = "0.16.20", features = ["std"] }
 rustls = { version = "0.20.6", default-features = false }
 rustls-pemfile = { version = "1.0.0", default-features = false }
 serde = { version = "1.0.136", features = ["derive"], default-features = false }
@@ -56,6 +57,8 @@ kvm-ioctls = { version = "0.11", default-features = false }
 lset = { version = "0.3", default-features = false }
 mmarinus = { version = "0.4.0", default-features = false }
 nbytes = { version = "0.1", default-features = false }
+p384 = { version = "0.11.1", features = ["std", "pem", "ecdsa"], default-features = false }
+pkcs8 = { version = "0.9.0", features = ["std", "pem"] }
 primordial = { version = "0.5", features = ["alloc"], default-features = false }
 protobuf = { version = "2.22", default-features = false }
 rand = { version = "0.8", features = ["std", "std_rng"], default-features = false }
